Removed doctype because it broke my css for some reason

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 <!--
+NOTE DOCTYPE html broke my css and I don't know why so I removed it
 File: index.html
 GUI Assignment: HW 3
 Max Cohn, Rising Senior at University of Massachusetts Lowell.
